=======
HISTORY
=======

1.1.12 (unreleased)
-------------------

- Display error message when uploading a file with a name consisting
  only of spaces.
  Fixes http://dev.plone.org/plone/ticket/10394
  [maurits]

- Backport fix: Set text/css content type on tinymce-getstyle.
  [elro] [toutpt]

- Backport fix: search does not work with Virtual Hosting (see #10308)
  [keul] [mamico]  

1.1.11 (2011-07-05)
-------------------

- Do not give a TypeError 'Could not adapt' when trying to adapt a
  context that is not adaptable to IJSONFolderListing and friends.
  Instead return nothing in the ajax call.
  [maurits]

- Do not fail with an ``AttributeError: __of__`` when displaying the
  wysiwyg template called with a context that is not acquisition
  aware.
  [maurits]


1.1.10 (2011-05-12)
-------------------

- Add a CSS class to the `Edit without visual editor` note.
  [hannosch]

- Avoid determining content type as text/plain on Dexterity add views.
  [davisagli]

- In the link "Edit without visual editor", append existing url-parameters.
  Fixes https://dev.plone.org/plone/ticket/11632
  [WouterVH]


1.1.9 (2011-04-02)
------------------

- Don't acquire when determining the mimetype of the field being edited.
  [davisagli]


1.1.8 (2011-02-24)
------------------

- Suppress the WYSIWYG editor for fields whose text format is not HTML, and
  provide a "Edit without visual editor" link like kupu did so that the format
  can be switched from HTML to something else.
  [davisagli]

- Fix wysiwyg_support to correctly respect a user's preference to use no
  wysiwyg editor.
  [davisagli]

- Updated Norwegian translations.
  [mj]


1.1.7 (2011-02-10)
------------------

- Add tests to make sure user can switch between editors using
  personalize_form
  [msmith64]

- Merged test fixes from
  http://dev.plone.org/collective/changeset/226086/Products.TinyMCE/branches/plip9938-output-filters
  to fix Plone 3 compatibility test failure.
  [msmith64]
